fix: preserve stable symlink path in hook templates
Remove filepath.EvalSymlinks() that resolved Homebrew symlink
(/opt/homebrew/bin/devback) to version-specific Caskroom path,
breaking hooks after upgrade.

Add PATH fallback (command -v devback) to hook templates as
defense-in-depth for existing installations.

Auto-update templates on Homebrew cask upgrade via post-install hook.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -84,4 +84,5 @@ homebrew_casks:
           if OS.mac?
             system_command "/usr/bin/xattr", args: ["-dr", "com.apple.quarantine", "#{staged_path}/devback"]
           end
+          system_command "#{staged_path}/devback", args: ["init", "--templates-only", "--force"]
     commit_msg_template: "Brew cask update for {{ .ProjectName }} version {{ .Tag }}"
